<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ae.redtoken.iz</groupId>
	<artifactId>ae.redtoken.iz.keyvault</artifactId>
	<version>0.0.1</version>
	<dependencies>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<packaging>pom</packaging>
	<modules>
		<module>ae.redtoken.iz.keyvault.core</module>
		<module>ae.redtoken.iz.keyvault.cmd</module>
	</modules>
</project>
